--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,7 +81,7 @@ const fullTitle = title.includes('WSAG') ? title : `${title} - WSAG`;
       "@type": "Organization",
       "name": siteTitle,
       "url": Astro.site || 'https://wsag.org',
-      "logo": new URL('/wsag-logo.png', Astro.site || 'https://wsag.org').toString(),
+      "logo": new URL('/images/logo.png', Astro.site || 'https://wsag.org').toString(),
       "description": description,
       "address": {
         "@type": "PostalAddress",
