--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -32,7 +32,7 @@ const navItems = isMainPage ? mainPageNavItems : otherPagesNavItems;
       <div class="flex items-center">
         <a href={isMainPage ? '#home' : (lang === 'en' ? '/en' : '/')} class="flex items-center">
           <img
-            src="/images/logo.png"
+            src="/images/logo-transparent.png"
             alt="Warsaw Software Architecture Group Logo"
             class="h-14 w-auto"
           />
