--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -4,6 +4,7 @@ import Navigation from '../../components/Navigation.astro';
 import Hero from '../../components/Hero.astro';
 import About from '../../components/About.astro';
 import Events from '../../components/Events.astro';
+import CallForPapers from '../../components/CallForPapers.astro';
 import Organizers from '../../components/Organizers.astro';
 import Footer from '../../components/Footer.astro';
 
@@ -16,6 +17,7 @@ const lang = 'en';
     <Hero lang={lang} />
     <About lang={lang} />
     <Events lang={lang} />
+    <CallForPapers lang={lang} />
     <Organizers lang={lang} />
   </main>
   <Footer lang={lang} />
